--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -116,7 +116,7 @@ body {
 
 .title-section {
 	color: $color-dark-gray;
-	font-size: 6em;
+	font-size: 4.8em;
 	position: relative;
 	float: left;
 	width: 100%;
@@ -263,7 +263,6 @@ body {
 }
 
 // Forms
-
 .default-input{
 	font-family: $font-secondary;
 	font-size: 1.3rem !important;
@@ -276,6 +275,7 @@ body {
 	height: 60px;
 	padding: 0 1.5em;
 	font-size: 1em;
+	border: 1px solid transparent;
 	margin-bottom: 1em;
 	@include transition(0.25s);
 	@include responsive(s2) {
@@ -284,7 +284,7 @@ body {
 	@include placeholder($color-white);
 }
 
-#form-franqueado,
+#form-franchisee,
 #form-contact {
 	position: relative;
 	float: left;
@@ -300,6 +300,36 @@ textarea {
 	height: 120px;
 	padding-top: 1em;
 	resize: none;
+}
+
+.fill-message{
+	position: relative;
+	float: left;
+	width: 100%;
+	text-align: center;
+	position: relative;
+	float: left;
+	width: 100%;
+	font-family: $font-secondary;
+	font-size: 1.1em;
+	color: $color-white;
+	margin-top: 2em;
+	margin-bottom: 0em;
+	line-height: 1.6em;
+	display:none;
+	@include responsive(s2) {
+		font-size: 1.35em;
+	}
+}
+
+.fill-message-contact{
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
+
+.error-form{
+	@include transition(0.25s);
+	border: 1px solid $color-orange!important;
 }
 
 // Carousels
@@ -328,10 +358,18 @@ textarea {
 
 // Select2
 .select2-container--default.select2-container--open.select2-container--below .select2-selection--single, .select2-container--default.select2-container--open.select2-container--below .select2-selection--multiple{
-	border-radius: 1.8em;
+	border-radius: 10px;
 }
 
+
+
 .select2-container{
+	&.error-form{
+		border: none!important;
+		.select2-selection--single {
+			border: 1px solid $color-orange;
+		}
+	}
 	.select2-results__option--highlighted[aria-selected] {
 		background-color: $color-orange;
 		color: white;
@@ -497,7 +535,7 @@ textarea {
 				height: 8px;
 				width: 2em;
 				background-color: #000000;
-				top: 3.8em;
+				top: 3.1em;
 				float: left;
 				opacity: 0.31;
 				left: 17px;
@@ -600,6 +638,7 @@ textarea {
 			line-height: 1.4em;
 			margin-top: 0;
 			margin-bottom: 1.2em;
+			cursor: pointer;
 		}
 		.question{
 			position: relative;
@@ -611,6 +650,7 @@ textarea {
 			margin-bottom: 1.4em;
 			line-height: 1.4em;
 			margin-left: 3em;
+			cursor: pointer;
 		}
 		.awnser {
 			position: relative;
@@ -630,28 +670,43 @@ textarea {
 	@extend .default-section;
 	margin-top: 2.14em;
 	margin-bottom: 2.14em;
-	h3{
+	h3 {
+		@extend .default-section;
 		color: $color-dark-gray;
 		font-family: $font-secondary;
 		font-size: 1.4em;
-		margin-bottom: 2em;
+		margin-bottom: 1.5em;
 	}
-	h4{
+	h4 {
+		@extend .default-section;
 		color: $color-orange;
 		font-family: $font-secondary;
-		margin-bottom: 2em;
+		font-size: 1.4em;
+		margin-bottom: 1.5em;
 		font-weight: normal;
-		span{
+	}
+	.format-letter{
+		position: relative;
+		float: left;
+		margin-right: 5px;
+		cursor: pointer;
+		&.hl {
 			font-family: $font-quaternary;
 		}
 	}
 	.title-glossario{
+		@extend .default-section;
 		color: $color-orange;
 		font-family: $font-quaternary;
+		margin-top: 1em;
 		margin-bottom: 1em;
 		font-size: 1.5em;
 	}
+	#filter-glossary{
+		margin: 0;
+	}
 	.description-glossario{
+		@extend .default-section;
 		margin-left: 3em;
 		font-family: $font-secondary;
 		color: $color-dark-gray;
@@ -699,6 +754,11 @@ textarea {
 			list-style-type: none;
 			color: $color-dark-gray;
 			font-size: 1.1em;
+			cursor: pointer;
+			.hl{
+				color: $color-orange;
+				text-transform: uppercase;
+			}
 		}
 	}
 }
@@ -783,7 +843,7 @@ textarea {
 	#carousel-seguradoras-associadas {
 		.owl-nav {
 			position: absolute;
-			top: calc(50% - 81px);
+			top: calc(50% - 121px);
 			margin: 0px;
 			width: 100%;
 			z-index: -1;
