--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -243,9 +243,10 @@ body {
 }
 
 .img-decorative {
-	height: 12.5em;
-	width: 12.5em;
-	margin-bottom: 2em;
+    height: 10em;
+    width: 10em;
+    margin-bottom: 2em;
+    margin-top: 1.3em;
 }
 
 .generic-relative {
