--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -362,7 +362,10 @@ textarea {
 	border-radius: 10px;
 }
 
-
+.select2-container--default.select2-container--open.select2-container--above .select2-selection--single,
+.select2-container--default.select2-container--open.select2-container--above .select2-selection--multiple {
+	border-radius: 10px;
+}
 
 .select2-container{
 	&.error-form{
@@ -376,6 +379,9 @@ textarea {
 		color: white;
 	}
 	&.select2-container--open{
+		.select2-dropdown--above{
+			margin-top: 0!important;
+		}
 		.select2-dropdown{
 			margin-top: -18px;
 			border: none;
@@ -518,6 +524,80 @@ textarea {
 	.container{
 		height: 100vh;
 	}
+	@media only screen and (max-height: 830px){
+		.decoration-1 {
+			height: 20em !important;
+			width: 20em !important;
+			left: 75%;
+			margin-left: -10em !important;
+			top: 20% !important;
+		}
+		.abf {
+			position: absolute;
+			width: 5em;
+			height: 10em;
+			margin-left: -2.5em;
+			left: 75%;
+			bottom: 2em;
+		}
+	}
+	@media only screen and (max-height: 750px){
+		.row-home{
+			input {
+				font-size: 1rem!important;
+				height: 45px;
+				padding: 0 1em;
+			}
+			h1 {
+				font-size: 2.8em;
+			}
+			button{
+				height: 55px;
+				svg{
+					top: 12px!important;
+				}
+			}
+			.extra-big {
+				font-size: 4rem;
+			}
+		}
+		.decoration-1 {
+			height: 18em !important;
+			width: 18em !important;
+			left: 75%;
+			margin-left: -9em !important;
+			top: 23% !important;
+		}
+		.abf {
+			position: absolute;
+			width: 5em;
+			height: 10em;
+			margin-left: -2.5em;
+			left: 75%;
+			bottom: 3em;
+		}
+		.select2-container {
+			&.select2-container--open {
+				.select2-selection--single {
+					.select2-selection__arrow {
+						height: 45px;
+					}
+				}
+			}
+			.select2-selection--single {
+				height: 45px!important;
+				padding: 0 1rem !important;
+				.select2-selection__rendered {
+					line-height: 45px !important;
+					font-size: 1rem;
+				}
+				.select2-selection__arrow {
+					height: 45px;
+				}
+			}
+		}
+
+	}
 	.row-home {
 		height: 100vh;
 		display: flex;
@@ -543,10 +623,19 @@ textarea {
 				@include responsive(s2){
 					top: 5em;
 				}
+				@include responsive(s3) {
+					top: 4.3em;
+				}
 			}
 			margin-bottom: 2.85rem;
 			@include responsive(s2) {
 				margin-top: 1.3em;
+			}
+			@include responsive(s3) {
+				.extra-big{
+					font-size: 3rem;
+				}
+				margin-bottom: 0.5em;
 			}
 		}
 		p {
@@ -554,6 +643,15 @@ textarea {
 			color: $color-white;
 			span{
 				color: $color-white;
+			}
+			@include responsive(s3) {
+				margin-bottom: 1em;
+			}
+		}
+		input,
+		.select2-selection--single{
+			@include responsive(s3) {
+				margin-bottom: 0.5em;
 			}
 		}
 		button {
@@ -591,6 +689,9 @@ textarea {
 					top: 14px;
 				}
 			}
+				@include responsive(s3) {
+					margin-top: 0.5em;
+				}
 		}
 		.box-relative{
 			@extend .default-section;
@@ -670,7 +771,7 @@ textarea {
 #glossario {
 	@extend .default-section;
 	margin-top: 2.14em;
-	margin-bottom: 2.14em;
+	margin-bottom: 1em;
 	h3 {
 		@extend .default-section;
 		color: $color-dark-gray;
@@ -711,8 +812,9 @@ textarea {
 		margin-left: 3em;
 		font-family: $font-secondary;
 		color: $color-dark-gray;
-		margin-bottom: 3em;
+		margin-bottom: 0em;
 		font-size: 1rem;
+		width: calc(100% - 3em);
 	}
 	.box-relative{
 		@extend .default-section;
