--- a/assets/css/src/pages/index.css
+++ b/assets/css/src/pages/index.css
@@ -767,9 +767,10 @@ textarea {
   #seguradoras-associadas .row-seguradoras-associadas .title-section:after {
     top: 2.4em; }
   #seguradoras-associadas .box-relative .item-img {
-    border: 1px solid #58585a;
+    border: 1px solid #ccc;
     width: 100%;
-    height: 160px; }
+    height: 160px;
+    border-radius: 10px; }
   #seguradoras-associadas .box-relative h2 {
     color: #58585a;
     font-size: 2em;
