--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -880,9 +880,10 @@ textarea {
 	.box-relative {
 		@extend .default-section;
 		.item-img {
-			border: 1px solid $color-dark-gray;
+			border: 1px solid $color-gray;
 			width: 100%;
 			height: 160px;
+			border-radius: 10px;
 		}
 		h2 {
 			color: $color-dark-gray;
