--- a/assets/css/src/pages/index.css
+++ b/assets/css/src/pages/index.css
@@ -771,6 +771,9 @@ textarea {
     width: 100%;
     height: 160px;
     border-radius: 10px; }
+    @media only screen and (max-width: 768px) {
+      #seguradoras-associadas .box-relative .item-img {
+        height: 230px; } }
   #seguradoras-associadas .box-relative h2 {
     color: #58585a;
     font-size: 2em;
