--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -884,6 +884,9 @@ textarea {
 			width: 100%;
 			height: 160px;
 			border-radius: 10px;
+			@include responsive(s3){
+				height: 230px;
+			}
 		}
 		h2 {
 			color: $color-dark-gray;
