--- a/assets/css/src/pages/index.css
+++ b/assets/css/src/pages/index.css
@@ -429,7 +429,12 @@ textarea {
   align-items: center;
   justify-content: center;
   margin-top: 70px;
-  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(65, 61, 61, 0.3)), url("../../../images/lien-bg-banner.jpg"); }
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(65, 61, 61, 0.3)), url("../../../images/lien-bg-banner.jpg");
+  background-position: center center; }
+  @media only screen and (max-width: 480px) {
+    #banner {
+      height: calc(100vh - 50px);
+      margin-top: 50px; } }
   #banner .box-banner {
     max-width: 75vw; }
     #banner .box-banner h1 {
