--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -471,7 +471,12 @@ textarea {
 	align-items: center;
 	justify-content: center;
 	margin-top: 70px;
+	@include responsive(s4) {
+		height: calc(100vh - 50px);
+		margin-top: 50px;
+	}
 	background: linear-gradient( rgba(0, 0, 0, 0.9), rgba(65, 61, 61, 0.3)), url('../../../images/lien-bg-banner.jpg');
+	background-position: center center;
 	.box-banner{
 		max-width: 75vw;
 		h1 {
